# cs317-record-store

./: .gitignore  README.md  flexbox.html  levenshtein.sql
Home Page/: home-page-header.css  home-page.css  home-page.html  palette.scss  palette.txt
Utilities/CS317 Migration APp/: migrate.py  pyproject.toml  test.sql
Utilities/CS317 Migration APp/migrations/1/: down.sql  up.sql
Utilities/CS317 Migration APp/migrations/10/: down.sql  up.sql
Utilities/CS317 Migration APp/migrations/11/: down.sql  up.sql
Utilities/CS317 Migration APp/migrations/12/: down.sql  up.sql
Utilities/CS317 Migration APp/migrations/13/: up.sql
Utilities/CS317 Migration APp/migrations/14/: down.sql
Utilities/CS317 Migration APp/migrations/15/: down.sql
Utilities/CS317 Migration APp/migrations/16/: down.sql  up.sql
Utilities/CS317 Migration APp/migrations/2/: down.sql  up.sql
Utilities/CS317 Migration APp/migrations/3/: down.sql  up.sql
Utilities/CS317 Migration APp/migrations/4/: down.sql  up.sql
Utilities/CS317 Migration APp/migrations/5/: down.sql  up.sql
Utilities/CS317 Migration APp/migrations/6/: down.sql  up.sql
Utilities/CS317 Migration APp/migrations/7/: down.sql  up.sql
Utilities/CS317 Migration APp/migrations/8/: up.sql
Utilities/CS317 Migration APp/migrations/9/: down.sql  up.sql
Utilities/Database Populator/: album_data.json  create_sql_from_spotify_json.py  frontend.json  get_albums_from_spotify.py  homepage.json  input.json  main.py  new_get_albums_from_spotify.py  output.json  pyproject.toml
html-intro/: button.css
youtube.html/: youtube.html
(+247 files in other folders)
