[tool.poetry]
name = "database populator"
version = "0.1.0"
description = ""
authors = ["gnations56 <gnationsonyoutube@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
html5lib = "^1.1"
python3-discogs-client = "^2.5"
spotipy = "^2.21.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
